################################################################################
#
# CMake appif library tests main file
#
# Copyright (c) 2013, Bernecker+Rainer Industrie-Elektronik Ges.m.b.H. (B&R)
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#     * Redistributions of source code must retain the above copyright
#       notice, this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above copyright
#       notice, this list of conditions and the following disclaimer in the
#       documentation and/or other materials provided with the distribution.
#     * Neither the name of the copyright holders nor the
#       names of its contributors may be used to endorse or promote products
#       derived from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL COPYRIGHT HOLDERS BE LIABLE FOR ANY
# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
################################################################################

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (appifUnitTests)

INCLUDE(AddTest)

FILE(GLOB TSTDIRECTORIES
    RELATIVE "${PROJECT_SOURCE_DIR}/"
    "${PROJECT_SOURCE_DIR}/TST*"
)

INCLUDE_DIRECTORIES ( "${PROJECT_SOURCE_DIR}/common/general" )
INCLUDE_DIRECTORIES ( "${appif_SOURCE_DIR}/include" )
INCLUDE_DIRECTORIES ( "${appifcommon_SOURCE_DIR}/include" )
INCLUDE_DIRECTORIES ( "${endian_SOURCE_DIR}/include" )
INCLUDE_DIRECTORIES ( "${TARGET_DIR}/include" )

# Path to the configuration headers for the application interface
INCLUDE_DIRECTORIES ( "${DEMO_CONFIG_DIR}/tbuf/include" )

# Add all test projects
FOREACH ( TSTDIR IN ITEMS ${TSTDIRECTORIES} )
    ADD_SUBDIRECTORY ( "${PROJECT_SOURCE_DIR}/${TSTDIR}" )
ENDFOREACH ( TSTDIR IN ITEMS ${TSTDIRECTORIES} )
